--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -19,7 +19,7 @@
         <div class="text-holder">
           <div class="text1">
             <img
-              src="/img/white to.svg "
+              src="./img/white to.svg "
               alt="Your SVG Image"
               width="380"
               height="78"
@@ -46,15 +46,5 @@
         </div>
       </div>
     </div>
-
-    <footer class="footer">
-      <div class="social-icons">
-        <a href="#" class="icon-link"><i class="fab fa-facebook"></i></a>
-        <a href="#" class="icon-link"><i class="fab fa-github"></i></a>
-        <a href="#" class="icon-link"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="icon-link"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="icon-link"><i class="fab fa-linkedin"></i></a>
-      </div>
-    </footer>
   </body>
 </html>
