Update font size and button text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
           </div>
           <div class="textbtn">
-            <button>Join Us Now!</button>
+            <button>Learn More</button>
           </div>
         </div>
         <div class="box-holder" id="boxHolder">
