Update styles and links in CSS and HTML files

--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <div class="wrapper">
+      <nav>
+        <h1>TechOdyssey</h1>
+        <button>Get Started</button>
+      </nav>
       <div class="container">
         <div class="text-holder">
           <div class="text1">
-            <img
-              src="./img/white to.svg "
-              alt="Your SVG Image"
-              width="380"
-              height="78"
-            />
+            <h1>Embrace the Beat Of the Future.</h1>
           </div>
           <div class="text2">
             <p>
@@ -38,11 +37,21 @@
           </div>
         </div>
         <div class="box-holder" id="boxHolder">
-          <div class="box box1"></div>
-          <div class="box box2"></div>
-          <div class="box box3"></div>
-          <div class="box box4"></div>
-          <div class="box box5"></div>
+          <div class="box box1">
+            <p>Let curiosity be your conductor and innovation, your melody.</p>
+          </div>
+          <div class="box box2">
+            <p>Innovation knows no limits and possibilities</p>
+          </div>
+          <div class="box box3">
+            <p>Technology becomes the heartbeat of human progress</p>
+          </div>
+          <div class="box box4">
+            <p>The future of technology is an unwritten score</p>
+          </div>
+          <div class="box box5">
+            <p>Embrace the sparks of innovation</p>
+          </div>
         </div>
       </div>
     </div>
