Update navigation links and styles

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <body>
     <div class="wrapper">
       <nav>
-        <h1>TechOdyssey</h1>
-        <button>Get Started</button>
+        <a href="inde.html" style="text-decoration: none">
+          <h1>TechOdyssey</h1></a
+        >
+        <a href="article.html"><button>Get Started</button></a>
       </nav>
       <div class="container">
         <div class="text-holder">
