happy friend added

--- a/article.html
+++ b/article.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Articles</title>
     <link rel="stylesheet" href="./css/article.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <nav>
@@ -34,20 +41,19 @@
       <ul>
         <a href="index.html"><li>Home</li> </a>
         <a href="article.html"><li class="active">Articles</li> </a>
-        <a href=""><li>Trends</li> </a>
-        <a href=""><li>Contact Us</li> </a>
-        <a href=""><li>About Us</li> </a>
+        <a href="trends.html"><li>Trends</li> </a>
+        <a href="contactus.html"><li>Contact Us</li> </a>
+        <a href="aboutus.html"><li>About Us</li> </a>
       </ul>
     </nav>
     <div class="header">
       <h1>
-        <span>A</span><span>r</span><span>t</span><span>i</span><span>c</span
-        ><span>l</span><span>e</span><span>s</span>
+        <span>T</span><span>o</span><span>p</span> <span></span><span>s</span
+        ><span>t</span><span>o</span><span>r</span><span>i</span><span>e</span
+        ><span>s</span>
       </h1>
     </div>
-
     <div class="main-con">
-      <h3>Top Stories</h3>
       <div class="con1">
         <div class="left">
           <div class="article">
@@ -78,8 +84,8 @@
             </div>
           </div>
         </div>
-        <div class="">
-          <div class="right1 right">
+        <div class="right-container">
+          <div class="right1">
             <div class="side-articles">
               <div class="side-pic">
                 <img
@@ -101,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="right2 right">
+          <div class="right2">
             <div class="side-articles">
               <div class="side-pic">
                 <img
@@ -125,16 +131,16 @@
               </div>
             </div>
           </div>
-          <div class="right3 right">
-            <div class="side-articles3">
-              <div class="side-pic3">
+          <div class="right3">
+            <div class="side-articles">
+              <div class="side-pic">
                 <img
-                  src="./img/andrea-de-santis-zwd435-ewb4-unsplash.jpg"
+                  src="./img/photo-1600248159633-7f9a317622d7.png"
                   alt="  Germany announces €1.75 Billion in funding to help high-tech
                 growth"
                 />
               </div>
-              <div class="side-text3">
+              <div class="side-text">
                 <p>Technology</p>
                 <h1>
                   Germany announces €1.75 Billion in funding to help high-tech
@@ -166,6 +172,46 @@
         <div class="con2-articles"></div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="social-icons">
+        <a
+          href="https://github.com/yourcompany"
+          target="_blank"
+          class="icon-link"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://facebook.com/yourcompany"
+          target="_blank"
+          class="icon-link"
+        >
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a
+          href="https://linkedin.com/company/yourcompany"
+          target="_blank"
+          class="icon-link"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a
+          href="https://twitter.com/yourcompany"
+          target="_blank"
+          class="icon-link"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a
+          href="https://instagram.com/yourcompany"
+          target="_blank"
+          class="icon-link"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <p>&copy; TechOdyssey 2025. All Rights Reserved.</p>
+    </footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const spans = document.querySelectorAll(".header h1 span");
