--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <nav>
-        <a href="inde.html" style="text-decoration: none">
+        <a href="index.html" style="text-decoration: none">
           <h1>TechOdyssey</h1></a
         >
         <a href="article.html"><button>Get Started</button></a>
@@ -40,22 +40,83 @@
         </div>
         <div class="box-holder" id="boxHolder">
           <div class="box box1">
-            <p>Let curiosity be your conductor and innovation, your melody.</p>
+            <p>Let curiosity be your conductor and innovation.</p>
+            <div class="img-card card1">
+              <img
+                src="./img/shield1.svg"
+                width="150px"
+                height="150px"
+                alt="shield"
+              />
+            </div>
           </div>
           <div class="box box2">
-            <p>Innovation knows no limits and possibilities</p>
+            <p>Innovation knows no limits</p>
+            <div class="img-card card2">
+              <img
+                src="./img/rocket1.svg"
+                width="130px"
+                height="130px"
+                alt="rocket"
+              />
+            </div>
           </div>
           <div class="box box3">
-            <p>Technology becomes the heartbeat of human progress</p>
+            <p>Technology is an unwritten score.</p>
+            <div class="img-card card3">
+              <img
+                src="./img/graph1.svg"
+                width="100px"
+                height="90px"
+                alt="graph"
+              />
+            </div>
           </div>
           <div class="box box4">
-            <p>The future of technology is an unwritten score</p>
+            <p>Sparks of innovation.</p>
+            <div class="img-card card4">
+              <img
+                src="./img/lb.svg"
+                width="100px"
+                height="100px"
+                alt="lightbulb"
+              />
+            </div>
           </div>
           <div class="box box5">
-            <p>Embrace the sparks of innovation</p>
+            <p>Technology is the heartbeat of human progress</p>
+            <div class="img-card card5">
+              <img
+                src="./img/heart.svg"
+                width="150px"
+                height="150px"
+                alt="heartbeat"
+              />
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="social-icons">
+        <a href="https://github.com" class="icon-link" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://facebook.com" class="icon-link" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://linkedin.com" class="icon-link" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://twitter.com" class="icon-link" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://instagram.com" class="icon-link" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+
+      <p>&copy; TechOdyssey 2025. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
