--- a/trends.html
+++ b/trends.html
@@ -43,19 +43,20 @@
       <ul>
         <a href="index.html"><li>Home</li></a>
         <a href="article.html"><li>Articles</li></a>
-        <a href="#"><li class="active">Trends</li></a>
-        <a href="#"><li>Contact Us</li></a>
-        <a href="#"><li>About Us</li></a>
+        <a href="trends.html"><li class="active">Trends</li></a>
+        <a href="contactus.html"><li>Contact Us</li></a>
+        <a href="aboutus.html"><li>About Us</li></a>
       </ul>
     </nav>
-
+    <header>
+      <h1>Techno Trends: Embrace the Future</h1>
+    </header>
     <div class="wrapper">
       <header>
-        <h1>Techno Trends: Embrace the Future</h1>
-        <p>
+        <h3>
           Explore the latest and upcoming trends in technology shaping our
           future.
-        </p>
+        </h3>
       </header>
 
       <div class="artificial-intelligence" data-aos="zoom-out-left">
