Update navigation links and contact form styles

--- a/index.html
+++ b/index.html
@@ -40,59 +40,71 @@
         </div>
         <div class="box-holder" id="boxHolder">
           <div class="box box1">
-            <p>Let curiosity be your conductor and innovation.</p>
+            <div class="text">
+              <p>CURIOSITY AS A CONDUCTOR AND INNOVATION.</p>
+            </div>
+
             <div class="img-card card1">
-              <img
-                src="./img/shield1.svg"
-                width="150px"
-                height="150px"
-                alt="shield"
-              />
+              <img src="./img/box1img.png" alt="innovation" />
             </div>
           </div>
-          <div class="box box2">
-            <p>Innovation knows no limits</p>
-            <div class="img-card card2">
-              <img
-                src="./img/rocket1.svg"
-                width="130px"
-                height="130px"
-                alt="rocket"
-              />
-            </div>
-          </div>
+          <div class="box box2"></div>
           <div class="box box3">
-            <p>Technology is an unwritten score.</p>
+            <p>TECHNOLOGY IS AN UNWRITTEN SCORE.</p>
             <div class="img-card card3">
-              <img
-                src="./img/graph1.svg"
-                width="100px"
-                height="90px"
-                alt="graph"
-              />
+              <img src="./img/box3.png" alt="innovation" />
             </div>
           </div>
           <div class="box box4">
-            <p>Sparks of innovation.</p>
-            <div class="img-card card4">
-              <img
-                src="./img/lb.svg"
-                width="100px"
-                height="100px"
-                alt="lightbulb"
-              />
+            <div class="text4">
+              <p>SPARKS OF INNOVATION</p>
             </div>
           </div>
           <div class="box box5">
-            <p>Technology is the heartbeat of human progress</p>
+            <p>KNOWS NO LIMITS.</p>
             <div class="img-card card5">
-              <img
-                src="./img/heart.svg"
-                width="150px"
-                height="150px"
-                alt="heartbeat"
-              />
+              <img src="./img/item5.png" alt="innovation" />
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="header2">
+        <h1>
+          Embark on a journey of innovation, where every click opens a door to
+          endless possibilities
+        </h1>
+      </div>
+      <div class="container2">
+        <div class="container-card1">
+          <div class="container-card1-img">
+            <img
+              src="./img/isometric-view-3d-rendering-neon-city.jpg"
+              alt="innovation"
+            />
+          </div>
+          <div class="container-card1-text">
+            <h1>Edge AI in IoT</h1>
+            <p>
+              Integration of artificial intelligence (AI) capabilities at the
+              edge of IoT networks to process data locally, reducing latency and
+              enhancing real-time decision-making.
+            </p>
+          </div>
+        </div>
+        <div class="container-card2">
+          <div class="container-card2-img">
+            <img
+              src="./img/view-brain-with-circuit-board.jpg"
+              alt="innovation"
+            />
+          </div>
+          <div class="container-card2-text">
+            <h1>5G Adoption</h1>
+            <p>
+              The widespread deployment of 5G networks supporting faster and
+              more reliable communication between IoT devices, enabling
+              applications with high data requirements.
+            </p>
           </div>
         </div>
       </div>
@@ -115,7 +127,6 @@
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-
       <p>&copy; TechOdyssey 2025. All Rights Reserved.</p>
     </footer>
   </body>
