--- a/contactus.html
+++ b/contactus.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/contactus.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
     <title>Contact Us | TechOdyssey</title>
   </head>
   <body>
@@ -35,39 +42,56 @@
         <a href="index.html"><li>Home</li></a>
         <a href="article.html"><li>Articles</li></a>
         <a href="trends.html"><li>Trends</li></a>
-        <a href="contactus.html"><li class="active">Contact Us</li></a>
+
         <a href="aboutus.html"><li>About Us</li></a>
+        <a href="contactus.html"><li class="active">Contact Us</li></a>
       </ul>
     </nav>
 
     <div class="wrapper">
-      <div class="contact-info">
-        <h1>Contact Us</h1>
-        <p>
-          Have questions or want to get in touch? Reach out to us using the
-          contact details below:
-        </p>
-        <ul>
-          <li>Email: info@techodyssey.com</li>
-          <li>Phone: +1 (123) 456-7890</li>
-          <li>Address: 123 Tech Street, Innovation City, Techland</li>
-        </ul>
-      </div>
+      <div class="contact-container">
+        <div class="contact-pic">
+          <img src="./img/SL-072622-51930-16.jpg" alt="Contact Us" />
+        </div>
+        <div class="contact-form">
+          <form action="#" method="post">
+            <h2>Send us a Message</h2>
+            <div class="input-container">
+              <i class="fas fa-user"></i>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Your Name"
+                required
+              />
+            </div>
 
-      <div class="contact-form">
-        <h2>Send us a Message</h2>
-        <form action="#" method="post">
-          <label for="name">Your Name:</label>
-          <input type="text" id="name" name="name" required />
+            <div class="input-container">
+              <i class="fas fa-envelope"></i>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Your Email"
+                required
+              />
+            </div>
 
-          <label for="email">Your Email:</label>
-          <input type="email" id="email" name="email" required />
+            <div class="input-container">
+              <i class="fas fa-comment"></i>
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Your Message"
+                rows="4"
+                required
+              ></textarea>
+            </div>
 
-          <label for="message">Your Message:</label>
-          <textarea id="message" name="message" rows="4" required></textarea>
-
-          <button type="submit">Send Message</button>
-        </form>
+            <button type="submit">Send Message</button>
+          </form>
+        </div>
       </div>
     </div>
 
