Update navigation styles and button links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
           </div>
           <div class="textbtn">
-            <button>Learn More</button>
+            <a href="article.html"> <button>Learn More</button></a>
           </div>
         </div>
         <div class="box-holder" id="boxHolder">
