--- a/article.html
+++ b/article.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Articles</title>
     <link rel="stylesheet" href="./css/article.css" />
+    <link rel="icon" type="image/x-icon" href="./img/icon.svg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -158,59 +159,46 @@
           </div>
         </div>
       </div>
-      <div class="con2">
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-        <div class="con2-articles"></div>
-      </div>
     </div>
     <footer class="footer">
       <div class="social-icons">
         <a
-          href="https://github.com/yourcompany"
+          href="https://github.com/definitelynotrc"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://facebook.com/yourcompany"
+          href=" https://www.facebook.com/ralphY.canlas/"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-facebook"></i>
         </a>
         <a
-          href="https://linkedin.com/company/yourcompany"
+          href="https://www.linkedin.com/in/ralph-canlas-8b1a00254/"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-linkedin"></i>
         </a>
         <a
-          href="https://twitter.com/yourcompany"
+          href="https://twitter.com/?lang=en"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-twitter"></i>
         </a>
         <a
-          href="https://instagram.com/yourcompany"
+          href="https://www.instagram.com/definitelynotrc/"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-      <p>&copy; TechOdyssey 2025. All Rights Reserved.</p>
+      <p>&copy; TechOdyssey 2024. All Rights Reserved.</p>
     </footer>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
