--- a/contactus.html
+++ b/contactus.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/contactus.css" />
+    <link rel="icon" type="image/x-icon" href="./img/icon.svg" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <title>Contact Us | TechOdyssey</title>
   </head>
@@ -98,42 +99,42 @@
     <footer class="footer">
       <div class="social-icons">
         <a
-          href="https://github.com/yourcompany"
+          href="https://github.com/definitelynotrc"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://facebook.com/yourcompany"
+          href=" https://www.facebook.com/ralphY.canlas/"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-facebook"></i>
         </a>
         <a
-          href="https://linkedin.com/company/yourcompany"
+          href="https://www.linkedin.com/in/ralph-canlas-8b1a00254/"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-linkedin"></i>
         </a>
         <a
-          href="https://twitter.com/yourcompany"
+          href="https://twitter.com/?lang=en"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-twitter"></i>
         </a>
         <a
-          href="https://instagram.com/yourcompany"
+          href="https://www.instagram.com/definitelynotrc/"
           target="_blank"
           class="icon-link"
         >
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-      <p>&copy; TechOdyssey 2025. All Rights Reserved.</p>
+      <p>&copy; TechOdyssey 2024. All Rights Reserved.</p>
     </footer>
   </body>
 </html>
