--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="./img/icon.svg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -11,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <title>Home</title>
   </head>
   <body>
@@ -111,23 +113,43 @@
     </div>
     <footer class="footer">
       <div class="social-icons">
-        <a href="https://github.com" class="icon-link" target="_blank">
+        <a
+          href="https://github.com/definitelynotrc"
+          target="_blank"
+          class="icon-link"
+        >
           <i class="fab fa-github"></i>
         </a>
-        <a href="https://facebook.com" class="icon-link" target="_blank">
+        <a
+          href=" https://www.facebook.com/ralphY.canlas/"
+          target="_blank"
+          class="icon-link"
+        >
           <i class="fab fa-facebook"></i>
         </a>
-        <a href="https://linkedin.com" class="icon-link" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/ralph-canlas-8b1a00254/"
+          target="_blank"
+          class="icon-link"
+        >
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://twitter.com" class="icon-link" target="_blank">
+        <a
+          href="https://twitter.com/?lang=en"
+          target="_blank"
+          class="icon-link"
+        >
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://instagram.com" class="icon-link" target="_blank">
+        <a
+          href="https://www.instagram.com/definitelynotrc/"
+          target="_blank"
+          class="icon-link"
+        >
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-      <p>&copy; TechOdyssey 2025. All Rights Reserved.</p>
+      <p>&copy; TechOdyssey 2024. All Rights Reserved.</p>
     </footer>
   </body>
 </html>
